--- a/scss/style.css
+++ b/scss/style.css
@@ -45,7 +45,98 @@ html {
 
 .header_searchbox {
   font-family: 'Montserrat', sans-serif;
+  outline: 0px;
+  margin: 0;
+  padding: 10px;
+  border: 1px;
+  right: 28%;
+  position: absolute;
+  width: 100px;
+  font-size: 12px;
+  cursor: pointer;
+}
+
+.header_searchbox:hover {
+  font-family: 'Montserrat', sans-serif;
   color: #007f5f;
-  border-style: 0px;
+}
+
+.header_overlaySrch {
+  height: 100%;
+  width: 100%;
+  display: none;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #007f5f;
+  background-color: #007f5f;
+  opacity: 80%;
+}
+
+.header_overlaySrch_content {
+  position: relative;
+  top: 46%;
+  width: 80%;
+  margin-top: 30px;
+  margin: auto;
+}
+
+.header_overlaySrch_content_search {
+  border: 0px;
+  background-color: #007f5f;
+  font-size: 87px;
+  font-family: 'Montserrat', sans-serif;
+  color: #FDB833;
+  position: absolute;
+  top: 50%;
+}
+
+.header_overlaySrch_closebtn {
+  cursor: pointer;
+}
+
+.header_overlaySrch_closebtn :first-child {
+  display: block;
+  width: 1px;
+  height: 30px;
+  background-color: white;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  top: 5%;
+  left: 90%;
+}
+
+.header_overlaySrch_closebtn :last-child {
+  display: block;
+  width: 1px;
+  background-color: white;
+  height: 30px;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+  top: 5%;
+  left: 90%;
+}
+
+.header_overlaySrch_closebtn:hover > span {
+  background-color: #FDB833;
+}
+
+.header_divider > span {
+  display: block;
+  width: 1px;
+  height: 30px;
+  background-color: #007f5f;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  top: 19px;
+  left: 72%;
 }
 /*# sourceMappingURL=style.css.map */
