--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -113,6 +113,7 @@
     width: 100%;
     background-color: $spanish_viridians;
     height: 51px;
+    
 
     
     &_list{
@@ -126,6 +127,7 @@
         >li{
             font-family: 'Montserrat', sans-serif;
             float: left;
+            transition: background-color 200ms ease-in-out;
         >a{
             display: block;
             color:white;
@@ -138,6 +140,7 @@
         li:hover{
             background-color: $honey_yellow;
             >a:hover{
+                transition: opacity 300ms ease-in-out;
                 color: $spanish_viridians;
             }
         }
