--- a/scss/style.css
+++ b/scss/style.css
@@ -5,8 +5,7 @@ html {
 }
 
 * {
-  margin-left: 0;
-  margin-right: 0;
+  margin: 0px;
 }
 
 *, *::before, ::after {
@@ -49,7 +48,7 @@ html {
 }
 
 .header_logo {
-  margin: 5px 0px 5px 0px;
+  margin: 10px 0;
 }
 
 .header_searchbox {
@@ -145,8 +144,12 @@ html {
   margin: 0;
   padding: 0;
   position: absolute;
-  top: 24px;
+  top: 22px;
   left: 72%;
+}
+
+.header_divider span:hover {
+  cursor: not-allowed;
 }
 
 .header_secondlink {
@@ -166,8 +169,6 @@ html {
 .header_secondlink_list > li {
   font-family: 'Montserrat', sans-serif;
   float: left;
-  -webkit-transition: background-color 200ms ease-in-out;
-  transition: background-color 200ms ease-in-out;
 }
 
 .header_secondlink_list > li > a {
@@ -177,15 +178,21 @@ html {
   padding: 19px 25px;
   text-decoration: none;
   font-size: x-small;
+  -webkit-transition: color 300ms ease-in-out;
+  transition: color 300ms ease-in-out;
 }
 
-.header_secondlink_list li:hover {
+.header_secondlink_list > li > a:hover {
+  color: #FDB833;
+}
+
+.header_secondlink_list_Handouts_content {
+  display: none;
+}
+
+.body_box {
+  width: 100%;
+  height: 700px;
   background-color: #FDB833;
-}
-
-.header_secondlink_list li:hover > a:hover {
-  -webkit-transition: opacity 300ms ease-in-out;
-  transition: opacity 300ms ease-in-out;
-  color: #007f5f;
 }
 /*# sourceMappingURL=style.css.map */
