--- a/scss/style.css
+++ b/scss/style.css
@@ -192,13 +192,16 @@ html {
 }
 
 .header_secondlink_list_handouts_container {
-  display: none;
+  visibility: hidden;
   position: absolute;
   background-color: #ffffff;
-  top: 140px;
+  top: 100px;
   border-radius: 10px;
   width: 250px;
   height: 200px;
+  opacity: 0;
+  -webkit-transition: top 300ms, opacity 0.5s ease-in-out;
+  transition: top 300ms, opacity 0.5s ease-in-out;
 }
 
 .header_secondlink_list_handouts_container_list {
@@ -217,8 +220,8 @@ html {
   padding: 10px 2px;
   text-decoration: none;
   font-size: small;
-  -webkit-transition: color 300ms ease-in-out;
-  transition: color 300ms ease-in-out;
+  -webkit-transition: color 300ms, margin-left 300ms ease-in-out;
+  transition: color 300ms, margin-left 300ms ease-in-out;
   top: 1px;
 }
 
@@ -231,6 +234,7 @@ html {
 
 .header_secondlink_list_handouts_container_list > li > a:hover {
   color: #007f5f;
+  margin-left: 5px;
 }
 
 .header_secondlink_list_handouts_container > span {
@@ -242,7 +246,129 @@ html {
 }
 
 .header_secondlink_list_handouts:hover .header_secondlink_list_handouts_container {
+  visibility: visible;
+  opacity: 100%;
+  top: 130px;
+}
+
+.header_secondlink_list_activity_container {
+  visibility: hidden;
+  position: absolute;
+  background-color: #ffffff;
+  top: 100px;
+  border-radius: 10px;
+  width: 250px;
+  height: 200px;
+  opacity: 0;
+  -webkit-transition: top 300ms, opacity 0.5s ease-in-out;
+  transition: top 300ms, opacity 0.5s ease-in-out;
+}
+
+.header_secondlink_list_activity_container_list {
+  list-style-type: none;
+  overflow: hidden;
+  text-decoration: none;
+  position: absolute;
+  padding-left: 15px;
+  width: 230px;
+}
+
+.header_secondlink_list_activity_container_list > li > a {
   display: block;
+  color: #7f7f7f;
+  text-align: left;
+  padding: 10px 2px;
+  text-decoration: none;
+  font-size: small;
+  -webkit-transition: color 300ms, margin-left 300ms ease-in-out;
+  transition: color 300ms, margin-left 300ms ease-in-out;
+  top: 1px;
+}
+
+.header_secondlink_list_activity_container_list > li > span {
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: #cccccc;
+}
+
+.header_secondlink_list_activity_container_list > li > a:hover {
+  color: #007f5f;
+  margin-left: 5px;
+}
+
+.header_secondlink_list_activity_container > span {
+  display: block;
+  padding: 10px;
+  padding-top: 29px;
+  padding-left: 20px;
+  color: #007f5f;
+}
+
+.header_secondlink_list_activity:hover .header_secondlink_list_activity_container {
+  visibility: visible;
+  opacity: 100%;
+  top: 130px;
+}
+
+.header_secondlink_list_exam_container {
+  visibility: hidden;
+  position: absolute;
+  background-color: #ffffff;
+  top: 100px;
+  border-radius: 10px;
+  width: 250px;
+  height: 200px;
+  opacity: 0;
+  -webkit-transition: top 300ms, opacity 0.5s ease-in-out;
+  transition: top 300ms, opacity 0.5s ease-in-out;
+}
+
+.header_secondlink_list_exam_container_list {
+  list-style-type: none;
+  overflow: hidden;
+  text-decoration: none;
+  position: absolute;
+  padding-left: 15px;
+  width: 230px;
+}
+
+.header_secondlink_list_exam_container_list > li > a {
+  display: block;
+  color: #7f7f7f;
+  text-align: left;
+  padding: 10px 2px;
+  text-decoration: none;
+  font-size: small;
+  -webkit-transition: color 300ms, margin-left 300ms ease-in-out;
+  transition: color 300ms, margin-left 300ms ease-in-out;
+  top: 1px;
+}
+
+.header_secondlink_list_exam_container_list > li > span {
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: #cccccc;
+}
+
+.header_secondlink_list_exam_container_list > li > a:hover {
+  color: #007f5f;
+  margin-left: 5px;
+}
+
+.header_secondlink_list_exam_container > span {
+  display: block;
+  padding: 10px;
+  padding-top: 29px;
+  padding-left: 20px;
+  color: #007f5f;
+}
+
+.header_secondlink_list_exam:hover .header_secondlink_list_exam_container {
+  visibility: visible;
+  opacity: 100%;
+  top: 130px;
 }
 
 .body_box {
