--- a/scss/style.css
+++ b/scss/style.css
@@ -376,4 +376,15 @@ html {
   height: 700px;
   background-color: #FDB833;
 }
+
+.footer {
+  margin: 0;
+  padding: 0;
+}
+
+.footer_box {
+  width: 100%;
+  height: 100px;
+  background-color: #007f5f;
+}
 /*# sourceMappingURL=style.css.map */
