--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -1,10 +1,15 @@
 .body{
-    &_box{
-        width: 100%;
-        height: 700px;
-        background-color: $honey_yellow;
-        
-    }
+    margin: 0px;
+    padding: 0px;
+    background-color: $honey_yellow;
+    width: 100%;
     
+    &_box{
+        height: 625px;
+
+        &_frames_imgs{
+        height: 100px;
+       }
+    }
 
 }
