--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,9 +1,18 @@
 .header{
     margin:  0;
     padding: 0;
-    
+    width: 100%;
+    height: 100%;
+    background: white;
+
+    &_header{
+        width: 100%;
+        height:100%;
+        background: white;             
+    } 
     &_logo{
         margin: 10px 0;
+        
     }
     
     //Searchbox Stlyes
@@ -121,6 +130,9 @@
     width: 100%;
     background-color: $spanish_viridians;
     height: 51px;
+    top: 0px;
+    position: sticky;
+
       
         &_list{
         list-style-type: none;
@@ -128,7 +140,7 @@
         padding: 0px;
         text-decoration: none;
         overflow: hidden;
-
+       
         >li{
             font-family: 'Montserrat', sans-serif;
             float: left;
@@ -156,7 +168,7 @@
                 visibility: hidden;
                 position: absolute;
                 background-color: #ffffff;
-                top: 100px;
+                top: 50px;
                 border-radius: 10px;
                 width: 250px;
                 height: 200px;
@@ -205,11 +217,6 @@
                   color: $spanish_viridians;
                 }
                }
-               &:hover &_container{
-                visibility: visible;
-                opacity: 100%;
-                top: 130px;             
-            }
             }   
          //dropdown Activities
             &_activity{
@@ -217,7 +224,7 @@
                 visibility: hidden;
                 position: absolute;
                 background-color: #ffffff;
-                top: 100px;
+                top: 50px;
                 border-radius: 10px;
                 width: 250px;
                 height: 200px;
@@ -266,25 +273,21 @@
                   color: $spanish_viridians;
                 }
             }
-           &:hover &_container{
-               visibility: visible;
-               opacity: 100%;
-               top: 130px;
-
-           }
            }
          //dropdown exam
             &_exam{
-            &_container{
+            &_container{ 
                 visibility: hidden;
+                display: block;
                 position: absolute;
                 background-color: #ffffff;
-                top: 100px;
+                top: 50px;
                 border-radius: 10px;
                 width: 250px;
                 height: 200px;
                 opacity: 0;
                 transition: top 300ms, opacity 0.5s ease-in-out;
+               
                 
                 &_list{
                    list-style-type: none;
@@ -327,11 +330,6 @@
                   padding-left: 20px;
                   color: $spanish_viridians;
                 }
-            }
-           &:hover &_container{
-               visibility: visible;
-               opacity: 100%;
-               top: 130px;
             }
             }
         } 
