--- a/scss/style.css
+++ b/scss/style.css
@@ -50,7 +50,7 @@ html {
 .dropdown:hover .dropdown_animation {
   visibility: visible;
   opacity: 100%;
-  top: 60px;
+  top: 55px;
 }
 
 .sticky {
@@ -412,5 +412,23 @@ html {
   width: 100%;
   height: 100px;
   background-color: #007f5f;
+}
+
+.body1 {
+  margin: 0;
+  padding: 0;
+  background-color: white;
+}
+
+.body1_container {
+  background-color: white;
+  display: block;
+  width: 100%;
+  height: 500px;
+}
+
+.body1_container_content {
+  display: flexbox;
+  margin: 50px;
 }
 /*# sourceMappingURL=style.css.map */
