--- a/scss/_body1(PerDevHO).scss
+++ b/scss/_body1(PerDevHO).scss
@@ -1,17 +1,75 @@
+@font-face{
+    font-family: Gilroy; src:"C:\Users\user\Desktop\Portfolio\Portfolio\Assets\Gilroy-Light.eot"
+}
 .body1{
     margin: 0;
     padding: 0;
     background-color: white;
-   
-    &_container{
-        background-color: rgb(255, 255, 255);
-            display: block;
-            width: 100%;
-            height: 500px;
-        
-        &_content{
-        display: flexbox;
-        margin: 50px;
-        }
+    
+    >h1{
+        position: relative;
+        font-family: 'Gilroy', sans-serif;
+        top: 30px;
+        left:30px;
+        font-size: 90px;
+        z-index: -1;
+        color: $spanish_viridians;
+        width: 1000px;
+       }   
+    >h4{
+       position: relative;
+       font-family: 'Gilroy', sans-serif;
+       top: 30px;
+       left:50px;
+       font-size: 20px;
+       z-index: -1;
+       width: 1000px;
+       color: #cccccc;
     }
+   #title{
+       margin-bottom: 35px;
+   }
+   
+    
+ &_container{
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    width: 100%;
+    height: 1000px;
+    top: 10px;
+       
+        
+     &_content{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        margin: 30px 0px 0px 30px;
+        
+     &_item{
+         width: 900px;
+         margin: 20px 0px;
+        
+        >h2{
+            font-family: 'Montserrat', sans-serif;
+            font-weight:  900;
+            font-size: 40px;
+            color: $spanish_viridians;
+            
+        }
+       >h6{
+            font-family:'Gilroy', sans-serif;
+            font-weight: 100;
+            margin: 0px 0px 5px 0px;
+            font-size: x-small;
+        }
+        >p{
+            font-family: 'Montserrat', sans-serif;
+            font-weight: 400;
+            font-size: 15px;
+        }
+
+        }
+
+    }
+  }
 }
