--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -173,6 +173,8 @@
                 width: 250px;
                 height: 200px;
                 opacity: 0;
+                display: block;
+                z-index: 1;
                 transition: top 300ms, opacity 0.5s ease-in-out;
                 
                 &_list{
