--- a/scss/style.css
+++ b/scss/style.css
@@ -234,6 +234,8 @@ html {
   width: 250px;
   height: 200px;
   opacity: 0;
+  display: block;
+  z-index: 1;
   -webkit-transition: top 300ms, opacity 0.5s ease-in-out;
   transition: top 300ms, opacity 0.5s ease-in-out;
 }
@@ -414,21 +416,88 @@ html {
   background-color: #007f5f;
 }
 
+@font-face {
+  font-family: Gilroy;
+  src: "C:\Users\user\Desktop\Portfolio\Portfolio\Assets\Gilroy-Light.eot";
+}
+
 .body1 {
   margin: 0;
   padding: 0;
   background-color: white;
 }
 
+.body1 > h1 {
+  position: relative;
+  font-family: 'Gilroy', sans-serif;
+  top: 30px;
+  left: 30px;
+  font-size: 90px;
+  z-index: -1;
+  color: #007f5f;
+  width: 1000px;
+}
+
+.body1 > h4 {
+  position: relative;
+  font-family: 'Gilroy', sans-serif;
+  top: 30px;
+  left: 50px;
+  font-size: 20px;
+  z-index: -1;
+  width: 1000px;
+  color: #cccccc;
+}
+
+.body1 #title {
+  margin-bottom: 35px;
+}
+
 .body1_container {
   background-color: white;
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   width: 100%;
-  height: 500px;
+  height: 1000px;
+  top: 10px;
 }
 
 .body1_container_content {
-  display: flexbox;
-  margin: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 30px 0px 0px 30px;
+}
+
+.body1_container_content_item {
+  width: 900px;
+  margin: 20px 0px;
+}
+
+.body1_container_content_item > h2 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 900;
+  font-size: 40px;
+  color: #007f5f;
+}
+
+.body1_container_content_item > h6 {
+  font-family: 'Gilroy', sans-serif;
+  font-weight: 100;
+  margin: 0px 0px 5px 0px;
+  font-size: x-small;
+}
+
+.body1_container_content_item > p {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 15px;
 }
 /*# sourceMappingURL=style.css.map */
