--- a/scss/_body1(PerDevHO).scss
+++ b/scss/_body1(PerDevHO).scss
@@ -19,12 +19,15 @@
     >h4{
        position: relative;
        font-family: 'Gilroy', sans-serif;
+       font-weight: 100;
+       font-size: 5px;
        top: 30px;
        left:50px;
        font-size: 20px;
        z-index: -1;
        width: 1000px;
        color: #cccccc;
+       
     }
    #title{
        margin-bottom: 35px;
