--- a/scss/style.css
+++ b/scss/style.css
@@ -441,6 +441,8 @@ html {
 .body1 > h4 {
   position: relative;
   font-family: 'Gilroy', sans-serif;
+  font-weight: 100;
+  font-size: 5px;
   top: 30px;
   left: 50px;
   font-size: 20px;
