--- a/scss/_body1(PerDevHO).scss
+++ b/scss/_body1(PerDevHO).scss
@@ -5,41 +5,36 @@
     margin: 0;
     padding: 0;
     background-color: white;
-    
+&_title{
+    margin: 20px 0px 0px 40px;
+    position: static; 
+    z-index: 1; 
+
     >h1{
-        position: relative;
         font-family: 'Gilroy', sans-serif;
-        top: 30px;
-        left:30px;
-        font-size: 90px;
-        z-index: -1;
+        font-size: 100px;
         color: $spanish_viridians;
-        width: 1000px;
+        
        }   
     >h4{
-       position: relative;
        font-family: 'Gilroy', sans-serif;
        font-weight: 100;
        font-size: 5px;
-       top: 30px;
-       left:50px;
        font-size: 20px;
-       z-index: -1;
-       width: 1000px;
        color: #cccccc;
        
     }
-   #title{
-       margin-bottom: 35px;
-   }
+
    
+}
+  
     
  &_container{
     background-color: rgb(255, 255, 255);
     display: flex;
     width: 100%;
     height: 1000px;
-    top: 10px;
+    position: relative;
        
         
      &_content{
@@ -63,14 +58,34 @@
             font-family:'Gilroy', sans-serif;
             font-weight: 100;
             margin: 0px 0px 5px 0px;
-            font-size: x-small;
+            font-size: 15px;
+            color: #cccccc;
         }
         >p{
             font-family: 'Montserrat', sans-serif;
             font-weight: 400;
             font-size: 15px;
         }
-
+        
+        &_btn{
+        margin: 20px;
+        padding: 15px 45px;
+        position: absolute;
+        left: 700px;
+        border: 1px solid $spanish_viridians;
+        text-decoration: none;
+        color: $spanish_viridians;
+        background-color: #00000000;
+        cursor: pointer;
+        transition: all 0.1s ease-in-out;
+        }
+        &_btn:hover{
+          background-color: $spanish_viridians;
+          color: white;
+          box-shadow: -5px 5px $honey_yellow;
+          transform: translate(5px, -5px);
+        }
+    
         }
 
     }
