--- a/scss/style.css
+++ b/scss/style.css
@@ -51,6 +51,7 @@ html {
   visibility: visible;
   opacity: 100%;
   top: 55px;
+  z-index: 5;
 }
 
 .sticky {
@@ -75,6 +76,7 @@ html {
   width: 100%;
   height: 100%;
   background: white;
+  z-index: 4;
 }
 
 .header_header {
@@ -203,6 +205,7 @@ html {
   padding: 0px;
   text-decoration: none;
   overflow: hidden;
+  z-index: 4;
 }
 
 .header_secondlink_list > li {
@@ -235,9 +238,9 @@ html {
   height: 200px;
   opacity: 0;
   display: block;
-  z-index: 1;
   -webkit-transition: top 300ms, opacity 0.5s ease-in-out;
   transition: top 300ms, opacity 0.5s ease-in-out;
+  z-index: 4;
 }
 
 .header_secondlink_list_handouts_container_list {
@@ -427,32 +430,24 @@ html {
   background-color: white;
 }
 
-.body1 > h1 {
-  position: relative;
-  font-family: 'Gilroy', sans-serif;
-  top: 30px;
-  left: 30px;
-  font-size: 90px;
-  z-index: -1;
-  color: #007f5f;
-  width: 1000px;
+.body1_title {
+  margin: 20px 0px 0px 40px;
+  position: static;
+  z-index: 1;
 }
 
-.body1 > h4 {
-  position: relative;
+.body1_title > h1 {
+  font-family: 'Gilroy', sans-serif;
+  font-size: 100px;
+  color: #007f5f;
+}
+
+.body1_title > h4 {
   font-family: 'Gilroy', sans-serif;
   font-weight: 100;
   font-size: 5px;
-  top: 30px;
-  left: 50px;
   font-size: 20px;
-  z-index: -1;
-  width: 1000px;
   color: #cccccc;
-}
-
-.body1 #title {
-  margin-bottom: 35px;
 }
 
 .body1_container {
@@ -462,7 +457,7 @@ html {
   display: flex;
   width: 100%;
   height: 1000px;
-  top: 10px;
+  position: relative;
 }
 
 .body1_container_content {
@@ -494,12 +489,36 @@ html {
   font-family: 'Gilroy', sans-serif;
   font-weight: 100;
   margin: 0px 0px 5px 0px;
-  font-size: x-small;
+  font-size: 15px;
+  color: #cccccc;
 }
 
 .body1_container_content_item > p {
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
   font-size: 15px;
+}
+
+.body1_container_content_item_btn {
+  margin: 20px;
+  padding: 15px 45px;
+  position: absolute;
+  left: 700px;
+  border: 1px solid #007f5f;
+  text-decoration: none;
+  color: #007f5f;
+  background-color: #00000000;
+  cursor: pointer;
+  -webkit-transition: all 0.1s ease-in-out;
+  transition: all 0.1s ease-in-out;
+}
+
+.body1_container_content_item_btn:hover {
+  background-color: #007f5f;
+  color: white;
+  -webkit-box-shadow: -5px 5px #FDB833;
+          box-shadow: -5px 5px #FDB833;
+  -webkit-transform: translate(5px, -5px);
+          transform: translate(5px, -5px);
 }
 /*# sourceMappingURL=style.css.map */
