--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,5 +3,6 @@
 @import "header";
 @import "body";
 @import "footer";
-@import "body1(PerDevHO)"
+@import "body1(PerDevHO)";
+@import "HOstlyes_Stress";
 
