--- a/scss/_body1(PerDevHO).scss
+++ b/scss/_body1(PerDevHO).scss
@@ -1,7 +1,8 @@
 @font-face{
     font-family: Gilroy; src:"C:\Users\user\Desktop\Portfolio\Portfolio\Assets\Gilroy-Light.eot"
 }
-.body1{
+.bodyPerdevHO{
+    
     margin: 0;
     padding: 0;
     background-color: white;
@@ -74,6 +75,7 @@
         left: 700px;
         border: 1px solid $spanish_viridians;
         text-decoration: none;
+        font-family: 'Montserrat', sans-serif;
         color: $spanish_viridians;
         background-color: #00000000;
         cursor: pointer;
