tapos na yung stress

--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -18,6 +18,11 @@ html{
     padding-right: 5.875rem;
 
 }
+.containerwithsidebar{
+    padding-left: 5.875rem;
+    padding-right: 30px;
+
+}
 
 //flexbox
 .flex{
