--- a/scss/_HOstlyes_Stress.scss
+++ b/scss/_HOstlyes_Stress.scss
@@ -5,7 +5,7 @@
     position: absolute;
     width: 100%;
 
-    &_container{
+&_container{
     height: 100%;
     &_title{
        font-family: 'Gilroy', sans-serif;
@@ -40,6 +40,9 @@
             margin: 10px 0px;
             
         }
+        >h2{
+            margin: 5px;
+          }
         }
         &_typeofstress{
         >h2{
@@ -106,12 +109,15 @@
 
 
     }
-    }
+}    
 &_activity_section{
     font-family: 'Gilroy',sans-serif;
     margin: 0px;
     padding-bottom: 40px;
     height: 100%;
+    position: relative;
+
+
 >h1{
     font-size: 90px;
     margin-bottom: 15px;
@@ -151,9 +157,103 @@
   }
 
 
-}  
 }
+
+&_stickyui{
+    top: 40px;
+    z-index: 1;
+    width: 300px;
+
+&_content{
+    font-family: 'Gilroy', sans-serif;
+    border-radius: 40px;
+    border: 5px solid #007f5f;
+    height: 450px;
+    width: 308px;
+    box-shadow: -10px 10px #fdb833;
+
+    >h1{
+        font-size: 20x;
+        margin-bottom: 10px;
+        padding: 20px 10px;
+        width: 300px;
+        border-radius: 25px 25px 0px 0px;
+        background-color: $spanish_viridians;
+        font-weight: lighter;
+        color: white;
     
+    } 
+    >h2{
+        font-size: 60px;
+        padding: 0px 10px;
+        width: 300px;
+        color: $spanish_viridians;
+         
+    }
+    >h6{
+        font-size: 15px;
+        font-weight: lighter;
+        margin-bottom: 30px;
+        padding: 0px 10px;
+        width: 300px;
+        color: #cccccc;
+    }
+    >h3{
+        font-size: 30px;
+        padding: 0px 10px;
+        width: 300px;
+        color: $spanish_viridians;
+    }
+    >ul{
+       list-style-type: none;
+       position: relative;
+       padding: 0px 30px;
+       width: 300px;
+       
+        >li{
+            margin: 0px;
+            font-family: 'Montserrat', sans-serif;
+            
+            >a{
+                display: block;
+                color: #7f7f7f;
+                text-align: left;
+                padding: 5px 0px;
+                text-decoration: none;
+                font-size: 15px;
+                transition: all 300ms ease-in-out;
+            
+    }
+            >a:hover{
+                color: $spanish_viridians;
+                margin-left: 5px;
+    }
+    }  
+    }
+
+
+}
+}
+} 
+
+//Sticky properties and flex
+.wrapper{
+    display: flex;
+    justify-content: space-between;
+    width: 1024px;
+}
+.maincontent{
+display: flex;
+flex-direction: column;
+}
+.sidebar{
+position: sticky;
+top:5%;
+padding-top: 50px;
+align-self: flex-start;
+padding-right: 50px;
+}
+
 
 
 
