--- a/scss/style.css
+++ b/scss/style.css
@@ -18,6 +18,11 @@ html {
   padding-right: 5.875rem;
 }
 
+.containerwithsidebar {
+  padding-left: 5.875rem;
+  padding-right: 30px;
+}
+
 .flex {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -578,6 +583,10 @@ html {
   margin: 10px 0px;
 }
 
+.bodystress_container_textarea_introduction > h2 {
+  margin: 5px;
+}
+
 .bodystress_container_textarea_typeofstress > h2 {
   margin: 5px;
 }
@@ -649,6 +658,7 @@ html {
   margin: 0px;
   padding-bottom: 40px;
   height: 100%;
+  position: relative;
 }
 
 .bodystress_activity_section > h1 {
@@ -691,5 +701,113 @@ html {
           box-shadow: -5px 5px #FDB833;
   -webkit-transform: translate(5px, -5px);
           transform: translate(5px, -5px);
+}
+
+.bodystress_stickyui {
+  top: 40px;
+  z-index: 1;
+  width: 300px;
+}
+
+.bodystress_stickyui_content {
+  font-family: 'Gilroy', sans-serif;
+  border-radius: 40px;
+  border: 5px solid #007f5f;
+  height: 450px;
+  width: 308px;
+  -webkit-box-shadow: -10px 10px #fdb833;
+          box-shadow: -10px 10px #fdb833;
+}
+
+.bodystress_stickyui_content > h1 {
+  font-size: 20x;
+  margin-bottom: 10px;
+  padding: 20px 10px;
+  width: 300px;
+  border-radius: 25px 25px 0px 0px;
+  background-color: #007f5f;
+  font-weight: lighter;
+  color: white;
+}
+
+.bodystress_stickyui_content > h2 {
+  font-size: 60px;
+  padding: 0px 10px;
+  width: 300px;
+  color: #007f5f;
+}
+
+.bodystress_stickyui_content > h6 {
+  font-size: 15px;
+  font-weight: lighter;
+  margin-bottom: 30px;
+  padding: 0px 10px;
+  width: 300px;
+  color: #cccccc;
+}
+
+.bodystress_stickyui_content > h3 {
+  font-size: 30px;
+  padding: 0px 10px;
+  width: 300px;
+  color: #007f5f;
+}
+
+.bodystress_stickyui_content > ul {
+  list-style-type: none;
+  position: relative;
+  padding: 0px 30px;
+  width: 300px;
+}
+
+.bodystress_stickyui_content > ul > li {
+  margin: 0px;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.bodystress_stickyui_content > ul > li > a {
+  display: block;
+  color: #7f7f7f;
+  text-align: left;
+  padding: 5px 0px;
+  text-decoration: none;
+  font-size: 15px;
+  -webkit-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out;
+}
+
+.bodystress_stickyui_content > ul > li > a:hover {
+  color: #007f5f;
+  margin-left: 5px;
+}
+
+.wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 1024px;
+}
+
+.maincontent {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.sidebar {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 5%;
+  padding-top: 50px;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+  padding-right: 50px;
 }
 /*# sourceMappingURL=style.css.map */
