--- a/scss/_body1(PerDevHO).scss
+++ b/scss/_body1(PerDevHO).scss
@@ -35,7 +35,7 @@
     display: flex;
     width: 100%;
     height: 1000px;
-    position: relative;
+    z-index: 0;
        
         
      &_content{
@@ -80,6 +80,7 @@
         background-color: #00000000;
         cursor: pointer;
         transition: all 0.1s ease-in-out;
+        z-index: 1;
         }
         &_btn:hover{
           background-color: $spanish_viridians;
